<resources>
    <string name="app_name">Ndarus</string>
    <string name="pendahuluan">Banyak sekali anjuran dan keutamaan membaca Al qur\'an, baik dari Al qur\'an maupun As sunnah, di antara keutamaan-keutamaan tersebut sebagai berikut :\n\n1. Al quran memberikan petunjuk kepada jalan yang paling lurus.\n\nاِنَّ هٰذَا الْقُرْاٰنَ يَهْدِيْ لِلَّتِيْ هِيَ اَقْوَمُ وَيُبَشِّرُ الْمُؤْمِنِيْنَ الَّذِيْنَ يَعْمَلُوْنَ الصّٰلِحٰتِ اَنَّ لَهُمْ اَجْرًا كَبِيْرًاۙ\n\n\"Sesungguhnya Al quran ini memberikan petunjuk kepada (jalan) yang lebih lurus dan memberi kabar gembira kepada orang-orang Mukmin yang mengerjakan amal sholih bahwa bagi mereka ada pahala yang besar\".(QS.Al Isra ayat 9).\n\n2. Al quran akan memberikan syafaat di hari kiamat.\nDari Abu Umamah berkata : aku mendengar Rasulullah Sholalloohu \'Alaihi Wasallam bersabda yang artinya\n\"Bacalah Al quran karena Al quran datang pada hari kiamat sebagai pemberi syafaat bagi para pembaca dan pengamalnya\".(HR. Muslim no.804)\n\n3. Yang belajar  dan mengajarkan Al quran adalah manusia pilihan.\nDari Utsman bin affan berkata, Rasulullah Sholalloohu \'Alaihi Wasallam bersabda yang artinya:\n\"Sebaik-baik kalian adalah orang yang mempelajari Al quran dan mengajarkannya\".(HR. Al Bukhari no.5027)\n\n4. Malaikat bersama orang yang mahir membaca Al quran.\nDari \'Aisyah berkata, Rasulullah Sholallaahu \'Alaihi Wasallam berkata yang artinya:\n\"Orang yang membaca Al quran sedangkan dia mahir, akan (digolongkan) bersama para malaikat yang mulia dan selalu berbuat kebaikan, sedangkan orang yang membaca Al quran, dengan terbata-bata, dan mengalami kesulitan, dia kan mendapatkan dua pahala.\"(HR. Al Bukhari dan Muslim no.798)</string>
    <string name="tartil_tajwid">Diantara ilmu terpenting yang harus diketahui setiap muslim adalah ilmu tajwid. Tanpa memahami ilmu ini, seorang muslim akan kesulitan dan akan melakukan banyak kesalahan dalam membaca Al quran. Allah memnurunkan Al quran kepada Nabi Muhammad, dan Dia (Allah) memerintahkan beliau Sholahllahu \'Alaihi Wasallam agar membacanya dengan tartil, sebagaimana firman Nya:\n\n...وَرَتِّلِ الْقُرْاٰنَ تَرْتِيْلًاۗ\n\n\"...dan tartilkanlah al quran itu dengan benar-benar tartil\".(QS. Al Muzammil ayat 4)\n\nApa makna tartil sebenarnya? Menurut \'Ali bin Abi Thalib, berkaitan dengan kata \"tartil\" bermakna :\n\"Tartil adalah mentajwidkan huruf dan mengetahui kaidah waqaf\".(At Tamhid fi ilmi tajwid, Ibnul Jazariy (hal 60)), sanadnya di permasalahkan oleh para ulama hadits, tetapi secara makna benar.\nMembaca dengan tajwid artinya membaca Al quran sebagaimana dahulu pertama kali diturunkan Allah ta\'ala kepada Nabi Muhammad melalui Malaikat Jibril. Inilah yang dikehendaki oleh Allah ta\'ala dan yang lebih disukai Nya. Lalu apa itu ilmu Tajwid?\n\nTajwid berasal dari kata : جَوَّدَ - يُجَوِّدُ - تَجْوِيدًا artinya \"membaguskan\", secara bahasa tajwid dengan tahsin itu sama. Menurut istilah, tajwid yaitu\n\"Mengucapkan setiap huruf dari makhroj serta memberikan haq dan mustahaq dari sifat-sifatnya\".(Hidayatul Qari, (1\'/45)).\n\nYang dimaksud haq huruf adalah sifat asli yang selalu melekat pada huruf tersebut, seperti : Al jahr, isti\'la istifal dan lain-lainnya. Yang dimaksud mustahaq huruf adalah sifat yang nampak sewaktu-waktu, seperti : tafkhim, tarqiq, ikhfa dan lain-lainnya.\n\nPerbedaan antara makhroj dan sifat huruf :\na. Makhroj huruf adalah tempat keluarnya huruf.\nb. Sifat huruf adalah cara mengeluarkan huruf.\n\nAdapun secara khusus, Tajwidul Huruf memiliki beberapa tingkatan dalam proses pembelajaran, yaitu.\n1. Tahsiinul Huruuf wash Shaut (Perbaikan Huruf dan Suara).\nTahap pertama dalam proses pembelajaran Tajwidul Huruf adalah perbaikan huruf dan suara, dalam hal ini adalah menyempurnakan penguasaan terhadap makharij dan shifatul huruf.\n2. Marhaalatut Takmiil (Penyempurnaan)\nPada tahap ini, akan mempelajari beberapa sifat penghias, dan hukum-hukum tajwid yang diakibatkan dari pertemuan antar huruf (seperti Nun dan Mim), dan hukum-hukum mad. Tahap ini tidak akan bisa diikuti dengan baik, kecuali bila tahap pertama telah dikuasai, baik secara teori ataupun praktik.\n3. Marhaalatul Itqaan (Pemantapan)\nMarhalah ini membahas beberapa hal yang berkaitan dengan \'Uluumul Quran, Ma\'rifatul Wuquf, dan termasuk di dalamnya ilmu rasm (pengetahuan tentang tulisan Al quran dalam mushaf Utsmani).</string>
    <string name="kiat_sukses">Adapun beberapa kita-kiat supaya sukses di dalam Tahsinut Tilawah :\n\n1. Niat yang ikhlash\nProses tahsin tilawah yang dilakukan niatnya harus benar, niat yang benar adalah semata-mata karena Allah ta\'ala.\n2. Yakin\nMenanamkan keyakinan diri dalam proses tahsin tilawah, adalah salah satu kunci suksesnya dalam usaha, tentu dengan potensinya masing-masing yang dimiliki.\n3. Talaqqi dan Musyafahah\n4. Disiplin dalam membaca setiap hari\n5. Merasa terikat dengan menambah jumlah atau target bacaan setiap hari atau periodik\n6. Membiasakan dengan satu jenis tulisan dari Mushaf\n7. Banyak mendengar bacaan murattal\n8. Membuka diri untuk menerima nasehat\n(Panduan tahsin tilawah al quran dan ilmu tajwid, hal 80-88)</string>
    <string name="huruf_hijaiyah">Huruf Hijaiyyah jumlahnya 29 huruf menurut jumhur ulama qiraat. Susunannya (susunan ini dibuat oleh Imam Nashr bin Ashim Al laitsi (wafat 90 H) sebagai berikut :</string>
    <string name="catatan_huruf_hijaiyah">1. Huruf yang pertama adalah hamzah (أ). Penyebutannya sebagai alif hanyalah majz (kiasan), karena huruf hamzah ketika berada di awal kata selalu di tulis dengan alif. Imam Ahmad ath thibiy rahimahullah (wafat tahun 979 H) berkata yang artinya:\n\"Huruf yang pertama adalah hamzah, akan tetapi disebut dengan alif sekedar majaz (kiasan) saja, karena hamzah jika di permulaan pasti tergambar (tertulis) dengan alif\". (manzhumah ath thibi)\n\n2. Huruf yang bernama lam alif (لا) adalah huruf alif yang sebenarnya. Huruf ini adalah huruf yang paling bebeda dari huruf lainnya, karena ia adalah huruf yang mati (selalu bertanda sukun) dan hanya dapat terbaca jika didahului oleh huruf yang berharakat fathah.</string>
    <string name="harokat">Harokat dalam Bahasa Arab ada 2 macam yaitu :\n1. Harokat ashliyyah yang terdiri dari :\na. Fathah\nBerbunyi \"a\" (pada huruf tipis) dan berbunyi \"o\" (pada huruf tebal)\nb. Kasrah\nBerbunyi \"i\"\nc. Dhammah\nBerbunyi \"u\"\n\n Ketiga harokat tersebut harus diucapkan dengan sempurna, sehingga bunyi aslinya tidak berubah ketika diucapkan.\n\nCara mengucapkan harakat dengan sempurna adalah :\na. Fathah\nMembuka mulut sewajarnya\nb. Kasrah\nMenurunkan rahang bawah\nc. Dhammah\n Memonyongkan kedua bibir\n\nAl Imam Ahmad Ath Thibi (wafat tahun 979 H) berkata yang artinya:\n\"Dan setiap (huruf) yang di dhammahkan tidak akan sempurna kecuali dengan mengumpulkan dua bibir (kedepan) dengan sempurna, kemudian kasrah akan sempurna dengan merendahkan bibir (rahang) dan (huruf) yang di fathahkan dengan membuka (mulut), fahamilah\".\n\n2. Harokat far\'iyyah, dinamakan juga harakat cabang yang terdiri dari muamalah dan musyammah (di isymamkan)</string>
    <string name="hukum_tajwid">Hukum belajar dan mengamalkan tajwid, sebagai landasan hukumnya adalah sebagai berikut yang artinya:\n\"Mempelajari ilmu tajwid hukumnya fardhu kifayah dan mengamalkannya fardhu \'ain bagi setiap pembaca Al quran dari kaum muslimin dan muslimat\".(Hidayatul Mustafid, hal 7)</string>
    <string name="hukum_tajwid2">Firman Allah ta\'ala :\n\n وَرَتِّلِ الْقُرْاٰنَ تَرْتِيْلًاۗ... \n\n\"...dan bacalah al quran itu dengan benar-benar tartil\".(QS.Al Muzammil ayat 4)\n\nDasar hukum dari hadits, yaitu tata cara qiraah Rasulullah Sholallahu \'Alaihi Wasallam disebutkan dalam beberapa hadits Nabi Sholallahu \'Alaihi Wasallam.</string>
    <string name="hukum_tajwid3">Al Imam Ibnul Jazariy mengatakan dalam Bait Jazariyyah yang artinya:\n\n\"Dan mengamalkan tajwid hukumnya wajib bagi seluruh muslim mukallaf. Siapa saja orang yang sengaja tidak mengamalkan tajwid saat membaca Al Quran, maka ia berdosa\". Karena bersama dengan tajwid Allah menurunkan Al quran. Dan bersama dengan tajwid pula Al quran dan cara membacanya sampai kepada kita.\"\n(Manzhumah Muqadimah Ibnul Jazary hal 3)</string>
    <string name="title_activity_detail_ro">DetailRoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tipis_tebal_pembukaan_desc">Huruf Lam (ل) dan huruf Ro\' (ر) ada yang dibaca tebal/TAFKHIM (تَفْخِيْم) dan ada pula yang dibaca tipis/TARQIQ (تَرْقِيْق).\nSedangkan huruf Ro\' ada yang boleh keduanya, dibaca tipis maupun dibaca tebal.</string>
    <string name="lam_tebal_desc">Apabila ada huruf LAM (ل) yang terdapat dalam perkataan ALLAH (اللّه) dan didahului oleh huruf yang berharokat FATHAH atau DLOMMAH harus dibaca tebal atau TAFKHIM yakni dengan cara mengangkat semua lidah dan menekannya ke langit-langit atas sambil menekankan suara yang cukup kuat. Perkataan Allah dinamakan :\nLAFADH JALALAH (لَفْظُ الْجَلَالَةِ).\n\nContoh :</string>
    <string name="lam_tipis_desc_1">A. Apabila ada huruf Lam (ل) yang terdapat dalam perkataan ALLAH (اللّه) dan didahului oleh huruf yang berharokat KASROH.\n\nContoh :</string>
    <string name="lam_tipis_desc_2">B. Huruf LAM (ل) yang terdapat dalam semua perkataan bahasa Arab selain perkataan JALALAH (اللّه) harus dibaca tipis (تَرْقِيْق) pada semua harokat, baik harokat fathah; kasroh; dhommah atau sukun (mati).\n\nContoh :</string>
    <string name="ro_tebal_desc_1">Huruf RO\' (ر) harus dibaca tebal, yaitu apabila :\nA. RO\' (ر) berharokat FATHAH atau FATHATAIN dan yang berharokat DLOMMAH atau DLOMMATAIN.\n\nContoh :</string>
    <string name="ro_tebal_desc_2">B. RO\' SUKUN (رْ) yang sebelumnya terdapat huruf yang berharokat FATHAH atau huruf yang berharokat DLOMMAH.\n\nContoh :</string>
    <string name="ro_tebal_desc_3">C. RO\' SUKUN (رْ), sedangkan huruf yang sebelumnya berharokat KASROH, tetapi kasroh itu bukan asli dari asal perkataan Arab.\n\nContoh :</string>
    <string name="ro_tebal_desc_4">D. RO\' SUKUN (رْ) dan huruf sebelumnya berharokat KASROH asli, tetapi setelah huruf RO\' berupa huruf ISTI\'LAA\' (اِسْتِعْلَاءْ) yang tidak berharokat kasroh.\nISTI\'LAA\' artinya : meninggi atau berat.\nHuruf Isti\'laa\' yaitu huruf ketika diucapkan lidah naik terangkat ke atas langit-langit mulut.\nHuruf-hurufnya adalah :\nخ ص ض غ ط ق ظ\n\nHuruf-huruf ISTI\'LAA\' itu terkumpul dalam suatu kalimat :\nخُصَّ - ضَغْطٍ - قِظْ\n\nContoh :</string>
    <string name="ro_tipis_desc_1">RO\' (ر) yang harus dibaca tipis (تَرْقِيْق), yaitu :\nA. RO\' (ر) yang berharokat KASROH dimanapun letaknya pada suatu perkataan, di awal, di tengah maupun di akhir perkataan, pada kata kerja (فِعْلٌ) ataupun pada kata benda (اسم).\n\nContoh :</string>
    <string name="ro_tipis_desc_2">B. RO\' (ر) yang sebelumnya terdapat YA\' SUKUN (يْ)\n\nContoh :</string>
    <string name="ro_tipis_desc_3">C. RO\' SUKUN (رْ) yang huruf sebelumnya berharokat KASROH yang asli, tetapi yang sesudahnya bukan huruf ISTI\'LAA\'.\n\nContoh :</string>
    <string name="ro_tipis_tebal_desc_1">Huruf RO\' (ر) boleh dibaca tebal atau tipis apabila RO\' itu SUKUN (رْ) sedang huruf sebelumnya itu berharokat KASROH dan huruf sesudahnya berupa huruf ISTI\'LAA\'.\n\nContoh :</string>
</resources>